# subwoofer

./: Cargo.toml  MEASUREMENTS.md  README.md  run_unattended.sh  rust-toolchain
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
add/: Cargo.toml
add/src/: lib.rs
addsub/: Cargo.toml
addsub/src/: lib.rs
average/: Cargo.toml
average/src/: lib.rs
benches/: benchmark.rs  f32.rs  f32x04.rs  f32x08.rs  f32x16.rs  f64.rs  f64x02.rs  f64x04.rs  f64x08.rs
book/: book.toml
book/src/: SUMMARY.md
book/src/user-guide/: acquiring-data.md  analysis.md  basic-check.md  codegen-check.md  full-measurements.md  hardware-operations.md  index.md  latency-throughput.md  naming-convention.md  other-insight.md  requirements.md  suggestions.md  system-setup.md
common/: Cargo.toml
common/src/: arch.rs  floats.rs  inputs.rs  lib.rs  operation.rs  operations.rs  process.rs
common/src/inputs/: mod.rs
common/src/inputs/generators/: add.rs  max.rs  mod.rs  muldiv.rs
div_denominator_min/: Cargo.toml
div_denominator_min/src/: lib.rs
div_numerator_max/: Cargo.toml
div_numerator_max/src/: lib.rs
fma_addend/: Cargo.toml
fma_addend/src/: lib.rs
fma_addend_average/: Cargo.toml
fma_addend_average/src/: lib.rs
fma_addend_max/: Cargo.toml
fma_addend_max/src/: lib.rs
fma_addend_min/: Cargo.toml
fma_addend_min/src/: lib.rs
fma_full_average/: Cargo.toml
fma_full_average/src/: lib.rs
fma_full_max/: Cargo.toml
fma_full_max/src/: lib.rs
fma_full_max_mul/: Cargo.toml
fma_full_max_mul/src/: lib.rs
fma_multiplier/: Cargo.toml
fma_multiplier/src/: lib.rs
fma_multiplier_average/: Cargo.toml
fma_multiplier_average/src/: lib.rs
fma_multiplier_bidi/: Cargo.toml
fma_multiplier_bidi/src/: lib.rs
fma_multiplier_min/: Cargo.toml
fma_multiplier_min/src/: lib.rs
max/: Cargo.toml
max/src/: lib.rs
mul_average/: Cargo.toml
mul_average/src/: lib.rs
mul_max/: Cargo.toml
mul_max/src/: lib.rs
plot/: Cargo.toml
plot/src/: main.rs
plot/src/kernel_density_estimator/: median_filter.rs  mod.rs
plot/src/kernel_density_estimator/median_filter/: mod.rs  ordered_multiset.rs
sqrt_positive_addsub/: Cargo.toml
sqrt_positive_addsub/src/: lib.rs
sqrt_positive_max/: Cargo.toml
sqrt_positive_max/src/: lib.rs
src/: arch.rs  benchmarks.rs  inputs.rs  lib.rs  operations.rs  process.rs  types.rs
