[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of ADD (should be the same as SUB)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "add"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
