[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of averaging"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "average"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
