[package]
autobenches = false
authors.workspace = true
categories.workspace = true
description = "Common infrastructure shared by all subnormal benchmarks"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "common"
repository.workspace = true
version.workspace = true

[features]
simd = []

[dependencies]
criterion.workspace = true
pessimize.workspace = true
rand.workspace = true
target-features.workspace = true

[dev-dependencies]
num-traits.workspace = true
proptest.workspace = true

[lib]
bench = false
