[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of DIV with a possibly subnormal numerator, followed by MAX"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "div_numerator_max"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true
target-features.workspace = true

[dev-dependencies]
common = { workspace = true, features = ["unstable_test"] }
proptest.workspace = true

[lib]
bench = false
