[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of FMA with a possibly subnormal addend, followed by averaging"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "fma_addend_average"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
