[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of FMA with possibly subnormal inputs&output, followed by MAX"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "fma_full_max"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
pessimize.workspace = true
rand.workspace = true

[dev-dependencies]
common = { workspace = true, features = ["unstable_test"] }
itertools.workspace = true
proptest.workspace = true

[lib]
bench = false
