[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of FMA with a possibly subnormal multiplier, followed by MIN"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "fma_multiplier_min"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
