[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of max, results are assumed to apply to min as well"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "max"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
