[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of MUL followed by MAX"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mul_max"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[lib]
bench = false
