[package]
name = "plot"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
colorous.workspace = true
criterion.workspace = true
criterion-cbor.workspace = true
env_logger.workspace = true
log = { workspace = true, features = ["release_max_level_info"] }
ordered-float.workspace = true
plotters.workspace = true
