[package]
authors.workspace = true
autobenches = false
categories.workspace = true
description = "Benchmark of SQRT followed by MAX"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sqrt_positive_max"
repository.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
rand.workspace = true

[dev-dependencies]
common = { workspace = true, features = ["unstable_test"] }

[lib]
bench = false
